Removed paste endpoint
